--- a/src/App.css
+++ b/src/App.css
@@ -37,21 +37,17 @@
   }
 }
 h1 {
-
   color: #fff;
 }
 
 body,
 html {
-
   margin: 0;
   padding: 0;
-
 }
 
 body {
-
-  background: url(/src/img/nen.gif) no-repeat center center fixed;
+  background: url(./assets/images/nen.gif) no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -70,7 +66,7 @@ header {
   align-items: center;
 }
 
-header>img {
+header > img {
   width: 9em;
   height: 9em;
   border-radius: 100%;
@@ -78,7 +74,7 @@ header>img {
   box-shadow: red 0px 2px 8px 0px;
 }
 
-header>h1 {
+header > h1 {
   display: inline-block;
   font-size: 1.2em;
   font-weight: bold;
@@ -93,13 +89,10 @@ header>h1 {
   box-sizing: border-box;
   list-style: none;
   margin: 0px auto;
-  padding:0.4em 1em;
-  
+  padding: 0.4em 1em;
 }
 
-.info>li {
-
-  
+.info > li {
   border-radius: 1em;
   padding: 0.5;
   margin: 1em 0;
@@ -108,8 +101,7 @@ header>h1 {
   display: inline-block;
 }
 
-.info>li>a {
-
+.info > li > a {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -118,13 +110,11 @@ header>h1 {
 }
 
 a {
-
   color: black;
   text-decoration: none;
   font-size: 20px;
   align-items: center;
   padding: 5px;
-
 }
 
 ul {
@@ -133,11 +123,9 @@ ul {
 }
 
 p {
-
   text-align: center;
   color: #fff;
 }
-
 
 .nav {
   max-height: 80px;
@@ -147,7 +135,6 @@ p {
   background: rgba(0, 0, 0, 0.2);
   padding: 0px;
   font-size: 12px;
-
 }
 
 .nav ul {
@@ -168,7 +155,7 @@ p {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
-  transition: all ease .4s;
+  transition: all ease 0.4s;
 }
 
 .nav ul li a:hover {
@@ -177,11 +164,9 @@ p {
 
 .project .card .img1 {
   display: flex;
-
 }
 
 .card {
-
   margin: 1rem 1rem;
   padding: 1rem 1rem;
   font-size: 20px;
@@ -190,25 +175,24 @@ p {
   height: auto;
   border-radius: 30px;
   background: rgba(0, 0, 0, 0.2);
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 50px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
 }
 
-.img--mid{
+.img--mid {
   border-radius: 30px;
 }
-.img--mid img{
-  
-  width:60%;
+.img--mid img {
+  width: 60%;
   height: 60%;
   border-radius: 30px;
 }
-.mid{
-  
+.mid {
   padding: 1rem 1rem;
   display: block;
 }
 
-.clickhere{
+.clickhere {
   text-align: center;
 }
 .clickhere :hover {
@@ -218,7 +202,6 @@ p {
   padding-top: 300px;
 }
 .info .img {
-  
   width: 30px;
   height: 30px;
   padding-bottom: 10px;
