--- a/react-study/src/App.css
+++ b/react-study/src/App.css
@@ -1,38 +1,551 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none; /* loại bỏ dấu gạch chân*/
+  border: none;
+  outline: none;
+  scroll-behavior: smooth; /*Tạo hiệu ứng trượt mượt mà trên phần tử có thể cuộn được */
+  font-family: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --bg-color: #1f242d;
+  --second-bg-color: #323946;
+  --text-color: #fff;
+  --main-color: rgb(146, 39, 170);
+  --smooth: all 0.3s ease-in;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 50.5%;
+  overflow-x: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
+}
+
+section {
   min-height: 100vh;
+  padding: 10rem 9% 2rem;
+}
+
+/*header*/
+
+.header {
+  position: fixed; /*đặt phần tử trong vị trí tuyệt đối và không bị ảnh hưởng bởi scroll của trang web.*/
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background: var(--bg-color);
   display: flex;
-  flex-direction: column;
+  justify-content: space-between; /*căn chỉnh các phần tử con trong phần tử .header ở hai bên cùng của phần tử cha.*/
+  align-items: center;
+  z-index: 100;
+}
+
+.header.sticky {
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2); /*áp dụng phần header đầu trang phân biệt giữa header với phần nội dung bên dưới khi người dùng cuộn trang xuống.*/
+}
+
+/*logo*/
+
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+  font-weight: 600; /*thiết lập độ đậm của chữ là 600 (có thể hiểu là độ dày của chữ)*/
+  cursor: default; /*con trỏ sẽ không thay đổi hình dạng khi di chuột qua phần tử*/
+  color: var(--main-color);
+}
+
+/*navbar*/
+
+.navbar a {
+  font-size: 1.7rem;
+  color: var(--text-color);
+  margin-left: 4rem;
+  transition: 0.3s;
+}
+
+.navbar a:hover,
+.navbar a.active {
+  color: var(--main-color);
+}
+
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--text-color);
+  display: none; /*ẩn phần tử, có nghĩa là phần tử này không sẽ được hiển thị trên trang web.*/
+}
+
+/*home*/
+
+.home {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.home-img img {
+  width: 25vw;
+  animation: floatImage 4s ease-in-out infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes floatImage {
+  /* hình ản chuyển động lên xuống */
+  0% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateY(-2.4rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.home-content h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+
+.home-content h3:nth-of-type(2) {
+  margin-bottom: 2rem;
+}
+
+span {
+  color: orangered;
+}
+
+.home-content h1 {
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: rgb(67, 249, 103);
+}
+
+.home-content p {
+  width: 855px;
+  height: px;
+  font-size: 1.5rem;
+  color: var(--text-color);
+}
+
+.social-media a {
+  display: inline-flex;
+  justify-content: center; /*căn giữa các phần tử theo chiều ngang.*/
+  align-items: center; /* căn giữa các phần tử theo chiều dọc.*/
+  width: 4rem;
+  height: 4rem;
+  background: transparent; /*thiết lập màu nền của phần tử là trong suốt.*/
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1rem 2.8rem;
+  background: var(--main-color);
+  border-radius: 4rem; /*Đặt bán kính bo tròn cho góc của phần tử là 4rem*/
+  box-shadow: 0 0 1rem var(--main-color); /* đặt hiệu ứng bóng cho  phần tử với bóng có màu tương đương với biến --main-color.*/
+  font-size: 1.6rem;
+  color: var(--second-bg-color);
+  letter-spacing: 0.1rem; /*Đặt khoảng cách giữa các chữ cái của phần tử là 0.1rem */
+  font-weight: 600;
+}
+
+.btn:hover {
+  background: rgb(28, 226, 236);
+}
+
+/*about*/
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background: var(--second-bg-color);
+}
+
+.about-img img {
+  width: 35vw;
+}
+
+.heading {
+  text-align: center;
+  font-size: 4.5rem;
+  color: rgb(76, 235, 113);
+}
+
+.about-content h2 {
+  text-align: left;
+  line-height: 1.2;
+}
+
+.about-content h3 {
+  font-size: 2.9rem;
+  font-weight: 700;
+  color: orangered;
+}
+
+.about-content ol {
+  font-size: 2rem;
+  margin: 2rem 2rem 3rem;
+}
+
+.about-content ol li {
+  color: var(--text-color);
+}
+
+/*services*/
+
+.services h2 {
+  margin-bottom: 5rem;
+}
+
+.services-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem; /*Thiết lập khoảng cách giữa các phần tử con là 2 rem, tạo ra một khoảng cách giữa các mục dịch vụ.*/
+  flex-wrap: wrap; /*ho phép các phần tử con được bọc vào nhiều dòng nếu chúng vượt quá chiều rộng của phần tử chứa.*/
+  padding-left: 16px;
+}
+
+.services-container .services-box {
+  flex: 1 1 30rem;
+  background: var(--second-bg-color);
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  text-align: center;
+  border: 0.2rem solid var(--bg-color);
+  transition: 0.5s ease; /* hiệu ứng chuyển động chậm */
+}
+
+.services-container .services-box:hover {
+  border-color: var(--main-color); /* hiệu ứng đường viền thay đổi màu sắc*/
+  transform: scale(1.02); /* phóng to */
+}
+
+.services-box i {
+  font-size: 7rem;
+  color: var(--main-color);
+}
+
+.services-box h3 {
+  font-size: 2.6rem;
+  color: rgb(246, 80, 19);
+}
+
+.services-box ol {
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
+  color: var(--text-color);
+}
+
+/*portfolio*/
+
+.portfolio {
+  background: var(--second-bg-color);
+}
+
+.portfolio h2 {
+  margin-bottom: 4rem;
+}
+
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(
+    3,
+    1fr
+  ); /*Chia lưới thành 3 cột có chiều rộng bằng nhau sử dụng hàm repeat() và giá trị 1fr, có nghĩa là tỉ lệ tự động chia sẻ chiều rộng giữa các cột.*/
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.portfolio-container .portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
+}
+
+.portfolio-box img {
+  width: 100%;
+  transition: 0.5s ease;
+}
+
+.portfolio-box:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: 0.5s ease;
+}
+
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(
+    0
+  ); /* di chuyen phần tử lên trên 0% kích thước của phần tử đó*/
+}
+
+.portfolio-layer h4 {
+  font-size: 3rem;
+  color: orangered;
+}
+
+.portfolio-layer p {
+  font-size: 1.6rem;
+  margin: 0.3rem 0 1rem;
+  color: rgb(64, 240, 240);
+}
+
+.portfolio-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background: var(--text-color);
+  border-radius: 50%;
+}
+
+.portfolio-layer a i {
+  font-size: 2rem;
+  color: var(--second-bg-color);
+}
+
+.portfolio-layer:hover a {
+  background: var(--main-color);
+}
+
+/*contact*/
+
+.contact h2 {
+  margin-bottom: 3rem;
+}
+
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; /*Giá trị wrap giúp các phần tử con được bố trí xuống dòng khi nó không thể nằm trên cùng một dòng với phần tử khác.*/
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  color: var(--text-color);
+  background: var(--second-bg-color);
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
+}
+
+.contact form .input-box input {
+  width: 49%;
+}
+
+.contact form textarea {
+  resize: none;
+}
+
+.contact form .btn {
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: var(--second-bg-color);
+}
+
+.footer-text p {
+  font-size: 1.6rem;
+}
+
+.footer-iconTop a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background: var(--main-color);
+  border-radius: 0.8rem;
+}
+
+.footer-iconTop a:hover {
+  box-shadow: 0 0 1rem var(--main-color);
+}
+
+.footer-iconTop a i {
+  font-size: 4rem;
+  color: var(--second-bg-color);
+}
+
+/* BREAKPOINTS */
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 991px) {
+  .header {
+    padding: 2rem 3%;
+  }
+
+  section {
+    padding: 10rem 3% 2rem;
+  }
+
+  .services {
+    padding-bottom: 7rem;
+  }
+
+  .portfolio {
+    padding-bottom: 7rem;
+  }
+
+  .contact {
+    min-height: auto;
+  }
+
+  .footer {
+    padding: 2rem 3%;
+  }
+}
+
+@media (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: 0.1rem solid rgba(31, 227, 54, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(17, 155, 19, 0.2);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
+
+  .home {
+    flex-direction: column;
+  }
+
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+  .home-content h1 {
+    font-size: 5rem;
+  }
+
+  .home-img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .about {
+    flex-direction: column-reverse;
+  }
+
+  .about img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .services h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 617px) {
+  .portfolio-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .contact form .input-box input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .home-img img {
+    width: 90vw;
+  }
+
+  .about-img img {
+    width: 90vw;
+  }
+
+  .footer {
+    flex-direction: column-reverse;
+  }
+
+  .footer p {
+    text-align: center;
+    margin-top: 2rem;
   }
 }
