--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -9,7 +9,7 @@ body {
 .container {
   border-radius: 8px;
   width: 300px;
-  margin: 50px auto;
+  margin: 10px auto;
 }
 .screen {
   background-color: white;
@@ -38,4 +38,85 @@ body {
 }
 .item-1:hover {
   background-color: #068185;
+}
+.screen .input {
+  position: absolute;
+  top: 0px;
+  right: 5px;
+  font-size: 40px;
+  color: rgb(63, 63, 63);
+  z-index: 222;
+} */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  font-family: "Poppins", sans-serif;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  display: grid;
+  place-items: center;
+  background: #fff;
+}
+.calculator {
+  width: 330px;
+  background: #fea691;
+  padding: 40px 30px;
+  border-radius: 10px;
+  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+form .result {
+  height: 60px;
+  width: 100%;
+  background: #fea691;
+  border-radius: 5px;
+  box-shadow: inset -3px -3px 7px #ffffff73,
+    inset 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+.result input {
+  width: 100%;
+  height: 100%;
+  background: none;
+  border: none;
+  outline: none;
+  font-size: 30px;
+  padding: 0 20px;
+  font-weight: 500;
+  text-align: right;
+  color: #fff;
+  pointer-events: none;
+}
+
+form .buttons {
+  text-align: center;
+  padding: 30px 0 0 0;
+}
+.buttons input[type="button"] {
+  height: 56px;
+  width: 56px;
+  font-size: 23px;
+  margin: 4px;
+  border: none;
+  outline: none;
+  background: #fea691;
+  border-radius: 5px;
+  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+  transition: background 0.3s linear;
+}
+.buttons input[type="button"]:focus {
+  transform: scale(0.9);
+  box-shadow: inset -3px -3px 7px #ffffff73,
+    inset 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+.buttons input[type="button"]:hover {
+  cursor: pointer;
+  background: #ffd1c8c9;
 }
