thanhdi_update-cash-register

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -46,9 +46,9 @@ body {
   font-size: 40px;
   color: rgb(63, 63, 63);
   z-index: 222;
-} */
+}
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
 
 * {
   margin: 0;
@@ -119,4 +119,4 @@ form .buttons {
 .buttons input[type="button"]:hover {
   cursor: pointer;
   background: #ffd1c8c9;
-}
+} */
